1.8.4.3 (unreleased)
--------------------------------------------------------------------------------
  - seas() works within forking parallization (e.g., mclapply) #276
    Thanks to @jonlachmann!
  - annual series are read correctly #264


1.8.4.2 (unreleased)
--------------------------------------------------------------------------------
  - out() works on composite objects #278
  - series() works on composite objects #278


1.8.4.1 (unreleased)
--------------------------------------------------------------------------------
  - Keep series specification also in `noinst/specs/specs.csv`
  - Adjust specs to include composite series, some additional seats series


1.8.4 2021-09-17
--------------------------------------------------------------------------------

bug fix
  - Avoid setting X13_PATH environment variable. Fix M1 startup issue #267


1.8.3  2021-06-14
--------------------------------------------------------------------------------

bug fix
  - Make sure example(seas) does not leave anything behind
  - escape tests on M1


1.8.2  2021-03-23
--------------------------------------------------------------------------------

bug fix
  - CRAN M1: rm detritus in the temp directory


1.8.1  2021-03-13
--------------------------------------------------------------------------------

bug fix
  - CRAN: do not run example on Solaris


1.8.0  2021-03-05
--------------------------------------------------------------------------------

new features
  - support for multiple time series and the composite spec

enhancements
  - static() prints a prettier output

bug fix
  - as.data.frame() fix date conversion for freqency 4, 2 (#256)
  - static() drop occasional warning (#235)
  - fix some backslash confusion on Windows (#237)


1.7.1  2020-06-06
--------------------------------------------------------------------------------

bug fix
  - specify convert.type(as.is = TRUE), to comply with next R


1.7.0  2018-12-19