@@ -3,6 +3,7 @@
   - seas() works within forking parallization (e.g., mclapply) #276
     Thanks to @jonlachmann!
   - annual series are read correctly #264
+  - January first can be used in genhol() #261
 
 
 1.8.4.2 (unreleased)
